--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                     <ul>
                     <li>
-                        <a href="/">Home</a>
+                        <a href="My-recipe/index.html">Home</a>
                     </li>
                     <li>
                         <a href="page2.html">Recipe</a>
