Ordered list on Page 2
Made it count automatically with word Step

--- a/about.html
+++ b/about.html
@@ -95,6 +95,23 @@
             <div class="headline" id="team">
                 <h2>meet the team</h2>
             </div> 
+            <div class="team_container">
+                <div class="team_container_member">
+                    <div class="team_container_member_text">
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                        <button>
+                            <a href=""></a>
+                        </button>
+
+                    </div>
+                    <div class="team_container_member_image">
+
+                    </div>
+                </div>
+
+            </div>
             <div class="about_text_paragraph">
             
                    
