Meet our team section
Added meet our team to About page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                     <p>What's for dinner?</p>
                 </div>
                 <div class="mobile_look">&#9776</div>
-                <div class="menu">
                 
-                    <ul>
+                
+                <div class="menu" >                
+                    <ul id="mobile-look-menu">
                     <li>
                         <a href="#">Home</a>
                     </li>
