--- a/about-page.html
+++ b/about-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What's for dinner</title>
+    <title>What's for dinner| About us</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -26,10 +26,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="page2.html">Recipe</a>
+                        <a href="recipe-details.html">Recipe</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about-page.html">About</a>
                     </li>
 
                     </ul>
